Wed Jan 25 2002 David Reveman (c99drn@cs.umu.se)

	Added decoration control system
	Finished (EWMH) specs support.

Wed Jan 23 2002 David Reveman (c99drn@cs.umu.se)

	Added checkbox item to menu system

Sun Jan 20 2002 David Reveman (c99drn@cs.umu.se)

	*** Waimea v0.1.4 release ***

Sat Jan 19 2002 David Reveman (c99drn@cs.umu.se)

	Completed dockapp handler system

Sun Dec  2 2001 David Reveman (c99drn@cs.umu.se)

	Made screenedges XDND aware

Fri Nov 30 2001 David Reveman (c99drn@cs.umu.se)

	Added dockapp handler

Wed Nov 28 2001 David Reveman (c99drn@cs.umu.se)

	Added TaskSwitcher

	*** Waimea v0.1.2 release ***

Mon Nov 26 2001 David Reveman (c99drn@cs.umu.se)

        Added KeyEvent support
        Added ViewportMove function
        Added command line execution to action system
			
Sat Nov 24 2001 David Reveman (c99drn@cs.umu.se)

        Added support for Blackbox menu files
        Added support of the XShape extension

        *** Waimea v0.1.1 release ***

Tue Nov 20 2001  David Reveman (c99drn@cs.umu.se)

       *** Waimea v0.1.0 release ***
       