@@ -1,7 +1,11 @@
+Wed Jan 26 2002 David Reveman (c99drn@cs.umu.se)
+
+        Added DoubleClick event to action system
+
 Wed Jan 25 2002 David Reveman (c99drn@cs.umu.se)
 
 	Added decoration control system
-	Finished (EWMH) specs support.
+	Finished (EWMH) specs support
 
 Wed Jan 23 2002 David Reveman (c99drn@cs.umu.se)
 
